--- a/ComePennyMaster/app/src/main/res/layout/activity_idea_detail_header.xml
+++ b/ComePennyMaster/app/src/main/res/layout/activity_idea_detail_header.xml
@@ -130,15 +130,16 @@
 
 
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/line" />
+                android:background="@drawable/line" />
             <LinearLayout
                 android:id="@+id/layout_capture"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:gravity="center_horizontal"
                     android:id="@+id/tv_ideaoriginal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -155,8 +156,8 @@
 
             <ImageButton
                 android:id="@+id/btn_pick"
-                android:layout_width="84dp"
-                android:layout_height="47dp"
+                android:layout_width="56dp"
+                android:layout_height="31dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/detail_pickbutton_before" />
@@ -204,10 +205,10 @@
                     android:visibility="invisible"/>
             </RelativeLayout>
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/line"
+                android:background="@drawable/line"
                 android:layout_marginBottom="10dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
