--- a/ComePennyMaster/app/src/main/res/layout/row_idea.xml
+++ b/ComePennyMaster/app/src/main/res/layout/row_idea.xml
@@ -59,22 +59,25 @@
                 </LinearLayout>
 
                 <TextView
+                    android:gravity="center_horizontal"
                     android:id="@+id/tv_idea"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:paddingBottom="13dp"
-                    android:text="적외선으로 상대의 위치를 추적하는 적외선 탐색 추적 장비와 야간에도 적을 물리친다.  "
                     android:textSize="15dp"
-                    android:textStyle="normal" />
+                    android:textStyle="normal"
+                    android:layout_marginLeft="3dp"
+                    />
 
                 <ImageView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginBottom="6dp"
                     android:layout_marginRight="5dp"
                     android:background="@drawable/line2" />
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -84,15 +87,18 @@
                     android:layout_marginRight="6dp"
                     android:gravity="right">
 
+
                     <TextView
+                        android:id="@+id/tv_row_booth_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
                         android:layout_weight="1"
                         android:paddingLeft="9dp"
-                        android:text="Homo Erectus"
+                        android:text=""
                         android:textColor="#29c5e4"
                         android:textSize="13dp" />
+
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -109,6 +115,29 @@
 
                         <TextView
                             android:id="@+id/tv_count_view"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="12dp"
+                            android:text="231234"
+                            android:textSize="12sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="comment : "
+                            android:textColor="#959595"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:id="@+id/tv_count_comment"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="12dp"
@@ -144,8 +173,8 @@
             </LinearLayout>
 
         </LinearLayout>
-
-        <com.enterpaper.comepennymaster.util.CircularImageView
+        <!--
+        <com.enterpaper.comepenny.util.CircularImageView
             android:id="@+id/iv_company"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -155,7 +184,7 @@
             android:layout_marginRight="5dp"
 
             android:src="@drawable/ex11" />
-
+            -->
 
     </RelativeLayout>
 </LinearLayout>
